k8s/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aphrodite
  labels:
    app: aphrodite
spec:
  selector:
    matchLabels:
      app: aphrodite
  template:
    metadata:
      labels:
        app: aphrodite
    spec:
      nodeSelector:
        # cloud.google.com/gke-nodepool: backend-stage-preemtpible
        kubernetes.azure.com/agentpool: backend
      containers:
        - image: acrkongastage.azurecr.io/aphrodite:latest
          name: aphrodite
          resources:
            limits:
              memory: 8192Mi
              cpu: 500m
            requests:
              memory: 512Mi
          ports:
            - containerPort: 80
              protocol: TCP
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: 80
              scheme: HTTP
            initialDelaySeconds: 20
            periodSeconds: 60

          # environment variables to be passed to staging
